@@ -2,7 +2,7 @@ name: Mark stale issues and pull requests
 
 on:
   schedule:
-  - cron: "* * * * *"
+  - cron: "0 8 * * *"
 
 jobs:
   stale:
